--- a/Anther-pistil.html
+++ b/Anther-pistil.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul class="docsbar">
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Reproduction.html">1. Reproduction</a></li>
       <li>
         <a href="Anther-pistil.html" class="active">2. Anther & Pistil</a>
@@ -224,3 +224,4 @@
 
   </body>
 </html>
+
