--- a/Reproduction.html
+++ b/Reproduction.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul class="docsbar">
-        <li><a href="Home.html" >Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="Reproduction.html" class="active">1. Reproduction</a></li>
         <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
         <li><a href="Com-Incom-flower.html">3. Complete & Incomplete Flower</a></li>
@@ -68,10 +68,11 @@
         <br>
         
         <nav class="middle">
-            <a class="navprev" href="Home.html">Previous</a>
+            <a class="navprev" href="index.html">Previous</a>
             <a class="navnext" href="Anther-pistil.html">Next</a>
         </nav>
     </div>
 
 </body>
+
 </html>
