--- a/Credit.html
+++ b/Credit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul class="docsbar">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Reproduction.html" >1. Reproduction</a></li>
         <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
         <li><a href="Com-Incom-flower.html">3. Complete & Incomplete Flower</a></li>
@@ -45,9 +45,10 @@
     
         <div class="middle">
             <a class="navprev" href="Quiz.html">Previous</a>
-            <a class="navnext" href="Home.html">Home?</a>
+            <a class="navnext" href="index.html">Home?</a>
         </div>
     </div>
 
 </body>
+
 </html>
