--- a/Embryo.html
+++ b/Embryo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul class="docsbar">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Reproduction.html" >1. Reproduction</a></li>
         <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
         <li><a href="Com-Incom-flower.html">3. Complete & Incomplete Flower</a></li>
@@ -89,4 +89,5 @@
         <a class="navnext" href="Seed.html">Next</a>
     </div>
 </body>
+
 </html>
