--- a/Fruit.html
+++ b/Fruit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul class="docsbar">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Reproduction.html" >1. Reproduction</a></li>
         <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
         <li><a href="Com-Incom-flower.html">3. Complete & Incomplete Flower</a></li>
@@ -66,4 +66,5 @@
           
 
 </body>
+
 </html>
