--- a/Germination.html
+++ b/Germination.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul class="docsbar">
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Reproduction.html">1. Reproduction</a></li>
       <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
       <li>
@@ -65,3 +65,4 @@
 
   </body>
 </html>
+
