--- a/Megasporogenesis.html
+++ b/Megasporogenesis.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul class="docsbar">
-        <li><a href="Home.html" >Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="Reproduction.html" >1. Reproduction</a></li>
         <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
         <li><a href="Com-Incom-flower.html">3. Complete & Incomplete Flower</a></li>
@@ -54,4 +54,5 @@
 
 
 </body>
+
 </html>
