--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <ul class="docsbar">
-      <li><a href="Home.html" class="active">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="Reproduction.html">1. Reproduction</a></li>
       <li><a href="Anther-pistil.html">2. Anther & Pistil</a></li>
       <li><a href="Com-Incom-flower.html">3. Complete & Incomplete Flower</a></li>
@@ -56,3 +56,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
