--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div>
           <h2>ยินดีต้อนรับสู่เว็บไซต์ปริศนา</h2>
           <p>
-            ซึ่งจะนำพวกท่านเข้าสู่โลกแห่งชีววิทยาในเรื่องที่ชื่อว่า "ดอกไม้ (Angiosperm)"
+            ซึ่งจะนำพวกท่านเข้าสู่โลกแห่งชีววิทยาในเรื่องที่ชื่อว่า "ดอกไม้ (Angiosperm)" และผมแนะนำให้เปิดในคอมหรือใน Tablet/IPad เพื่อประสบการณ์ที่ดีนะครับ
           </p>
         </div>
 
@@ -56,4 +56,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
